Se agregan efectos de sonido

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 				<div id="game-over-ManeraFin"></div>
 			</div>
             <!-- <div id="game-over-distance-row">Distance: <div id="game-over-distance"></div></div> -->
-            <button id="replay-button">Replay</button>
+            <a href="/PantallaInicial/index.html"id="replay-button">Menu</a>
+			
         </div>
     </div>
 
